--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "ts-node index.ts",
-    "cross": "ts-node ./node_modules/cross-api-template/index.ts",
-    "1": "ts-node ./src/tools/jsonConfig.ts"
+    "cross": "ts-node ./node_modules/cross-api-template/index.ts"
   },
   "keywords": [],
   "author": "",
