--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "cross-api",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "description": "A CLI which can generate a good, clean and strongly typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests. All contributors are welcome",
   "keywords": [
     "cross",
-    "cross-api"
+    "api",
+    "cross-api",
+    "cross api"
   ],
   "author": "Mauro Domingues <maurinho.villa@hotmail.com>",
   "contributors": [],
