--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cross-api",
-  "version": "2.6.4",
-  "description": "A CLI which can generate a good, clean and strongly typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests. All contributors are welcome",
+  "version": "2.6.5",
+  "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests.",
   "keywords": [
     "cross",
     "api",
