--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-api",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests.",
   "keywords": [
     "cross",
@@ -30,15 +30,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^18.11.16",
-    "@types/pluralize": "^0.0.29",
-    "@types/shelljs": "^0.8.11",
     "fs-extra": "^11.1.0",
     "pluralize": "^8.0.0",
-    "shelljs": "^0.8.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
@@ -50,6 +44,10 @@
     "@babel/preset-typescript": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
+    "@types/fs-extra": "^11.0.1",
+    "@types/node": "^18.11.16",
+    "@types/pluralize": "^0.0.29",
+    "@types/shelljs": "^0.8.11",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.30.0",
@@ -60,6 +58,7 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
