--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cross-api",
-  "version": "3.3.5",
+  "version": "3.3.6",
+  "type": "module",
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests.",
   "keywords": [
     "cross",
