--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cross": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc & tsc-alias"
+    "build": "tsc & tsc-alias",
+    "postinstall": "npm install tsc-alias@^1.8.5 -D && tsc & tsc-alias && cross config"
   },
   "license": "Apache-2.0",
   "devDependencies": {
