--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "tsc & tsc-alias",
     "install": "npm install tsc-alias@^1.8.5 -D ",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build && npx cross config"
   },
   "license": "Apache-2.0",
   "devDependencies": {
