--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postinstall": "npm run build && npm prune"
   },
   "license": "Apache-2.0",
+  "dependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
