--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests.",
   "keywords": [
     "cross",
-    "api",
-    "cross-api",
-    "cross api",
-    "npm cross-api",
-    "npm cross api"
+    "api"
   ],
   "author": "Mauro Domingues <maurinho.villa@hotmail.com>",
   "contributors": [],
