--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cross-api",
-  "version": "3.8.1",
+  "version": "3.8.2",
   "type": "module",
-  "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers and unit tests.",
+  "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
   "keywords": [
     "cross",
     "api"
