--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "cross-api",
-  "version": "3.8.7",
+  "version": "3.8.8",
   "type": "module",
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
   "keywords": [
     "cross",
-    "api"
+    "api",
+    "cross-api",
+    "Cross api"
   ],
   "author": "Mauro Domingues <maurinho.villa@hotmail.com>",
   "contributors": [],
