--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-api",
-  "version": "3.9.4",
+  "version": "3.9.5",
   "type": "module",
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
   "keywords": [
@@ -22,8 +22,7 @@
     "cross": "./src/index.js"
   },
   "scripts": {
-    "build": "tsc && tsc-alias",
-    "postinstall": "npm run build"
+    "postinstall": "tsc && tsc-alias"
   },
   "license": "Apache-2.0",
   "devDependencies": {
@@ -37,7 +36,6 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
-    "tsc-alias": "^1.8.5",
     "typescript": "^5.0.4"
   }
 }
