--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
     "module": "ES2022",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "rootDir": "./src",
+    "outDir": "./src",
     "baseUrl": "./src",
     "paths": {
       "@templates/*": ["templates/*"],
-      "@tools/*": ["tools/*"],
+      "@tools/*": ["tools/*"]
     },
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "rootDir": "./src",
-    "outDir": "./src",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
     "strictPropertyInitialization": true,
-    "skipLibCheck": true
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "allowJs": true,
+    "moduleResolution": "node"
   },
   "include": ["src"],
   "exclude": ["node_modules"],
-  "ts-node": {"files": true},
+  "ts-node": { "files": true },
   "tsc-alias": {
-    "resolveFullPaths": true,
+    "resolveFullPaths": true
   }
 }
