--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-api",
-  "version": "5.4.0",
+  "version": "5.4.1",
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
   "main": "src/index.js",
   "type": "module",
@@ -39,5 +39,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
     "typescript": "^5.0.4"
+  },
+  "engines": {
+    "node": ">=14.14.0"
   }
 }
