--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "cross-api",
-  "version": "5.4.9",
+  "version": "5.5.0",
   "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "prepublishOnly": "npx tsc && npx tsc-alias"
+    "build": "npx tsc && npx tsc-alias",
+    "clear": "npx tsc --build --clean",
+    "prepublishOnly": "npm run build"
   },
   "bin": {
     "cross": "./src/index.js"
