--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -96,7 +96,7 @@
       }
     ],
     "import/order": [
-      "error",
+      "warn",
       {
         "alphabetize": {
           "order": "asc",
