--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cross-api",
-  "version": "5.7.0",
-  "description": "A CLI which can generate a good, clean and statically typed api structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
+  "version": "5.7.1",
+  "description": "A CLI which can generate a good, clean and statically typed API structure with typescript and SOLID principles. It's features includes cruds, providers, unit tests and documentation generation.",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -26,6 +26,7 @@
     "cli"
   ],
   "author": "Mauro Domingues <maurinho.villa@hotmail.com>",
+  "createdAt": "Dec 18, 2022",
   "license": "Apache-2.0",
   "contributors": [],
   "files": ["src/**/*.js", "!src/interfaces", "!src/interfaces/**"],
