--- a/package.json
+++ b/package.json
@@ -29,7 +29,13 @@
   "createdAt": "Dec 18, 2022",
   "license": "Apache-2.0",
   "contributors": [],
-  "files": ["src/**/*.js", "!src/interfaces", "!src/interfaces/**"],
+  "files": [
+    "src/**/*.js",
+    "!src/interfaces",
+    "!src/interfaces/**",
+    "!src/@types",
+    "!src/@types/**"
+  ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
