--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cross-api",
-  "version": "5.7.4",
-  "description": "A CLI which can generate a good, clean and statically typed API structure with typescript and SOLID principles. It's features includes CRUD operations, providers, unit tests and documentation generation.",
+  "version": "5.7.5",
+  "description": "A CLI which can generate a good, clean and statically typed API structure with typescript and SOLID principles. It's features includes CRUD operations, providers, unit tests and documentation.",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
