--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-api",
-  "version": "5.7.7",
+  "version": "5.7.8",
   "description": "A CLI which can generate a good, clean and statically typed API structure with typescript and SOLID principles. It's features includes CRUD operations, providers, unit tests and documentation.",
   "main": "src/index.js",
   "type": "module",
@@ -34,9 +34,7 @@
   "license": "Apache-2.0",
   "contributors": [],
   "files": [
-    "src/**/*.js",
-    "!src/interfaces/**",
-    "!src/@types/**"
+    "src/**/*.js"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.58.0",
