--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,6 +120,7 @@
     "no-shadow": "off",
     "no-useless-constructor": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "prettier/prettier": "error"
   },
   "settings": {
