--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "npx tsc && npx tsc-alias && node postbuild.js && npx prettier --write \"src/**/*.js\" >nul 2>&1",
-    "clean": "npx tsc --build --clean"
+    "build": "npx tsc && npx tsc-alias",
+    "postbuild": "node postbuild.js",
+    "lint": "npx prettier --write \"src/**/*.js\" >nul 2>&1",
+    "clean": "npx tsc --build --clean",
+    "prepublishOnly": "npm run build && npm run postbuild && npm run lint",
+    "postpublish": "npm run clean"
   },
   "bin": {
     "cross": "./src/index.js"
