--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-api",
-  "version": "6.5.8",
+  "version": "6.5.9",
   "description": "A CLI which can generate a good, clean and statically typed API structure with typescript and SOLID principles. It's features includes CRUD operations, providers, unit tests and documentation.",
   "main": "src/index.js",
   "type": "module",
@@ -9,7 +9,7 @@
     "postbuild": "node postbuild.js",
     "lint": "npx prettier --write \"src/**/*.js\" >nul 2>&1",
     "clean": "npx tsc --build --clean",
-    "prepublishOnly": "npm run build && npm run postbuild && npm run lint",
+    "prepublishOnly": "npm run build && npm run lint",
     "postpublish": "npm run clean"
   },
   "bin": {
